# Kimberlite

./: AboutDB.txt  CMakeLists.txt  ROADMAP  StyleSheet.css  authors  install  install_manifest.txt  kimberlite  kimberlite.db  kimberlite.desktop  kimberlite.shell  kimberlite_automoc.cpp  kimberliteui.rc  main.cpp  mainwindow.cpp  mainwindow.h  page1.htm  page2.htm  page3.htm  test.wkp  test2.wkp  tips
data/: home.htm
homePage/: home.htm
src/: CSSbeginnerWidget.cpp  CSSbeginnerWidget.h  ProjectManager.cpp  ProjectManager.h  ProjectManager_v2.cpp  ProjectManager_v2.h  addProprietyWidget.cpp  addProprietyWidget.h  colorComboBox.cpp  colorComboBox.cpp~  colorComboBox.h  colorComboBox.h~  config.cpp  config.h  configSkeleton.h  cssAdvModeLegacy.cpp  cssParser.cpp  cssParser.h  cssPreviewWidget.cpp  cssPreviewWidget.h  debugger.cpp  debugger.h  headerComboBox.cpp  headerComboBox.h  htmlParser.cpp  htmlParser.h  htmlThread.cpp  htmlThread.h  miniClasses.h  newPage.cpp  newPage.h  newProject.cpp  newProject.h  newScript.cpp  newScript.h  newTable.cpp  newTable.h  phpParser.cpp  phpParser.h  ressourcesManager.cpp  (+11 more)
src/qtpropertybrowser-2.5-opensource/doc/html/: index.html  qtabstracteditorfactory-members.html  qtabstracteditorfactory.html  qtabstracteditorfactorybase-members.html  qtabstracteditorfactorybase.html  qtabstractpropertybrowser-members.html  qtabstractpropertybrowser.html  qtabstractpropertymanager-members.html  qtabstractpropertymanager.html  qtboolpropertymanager-members.html  qtboolpropertymanager.html  qtbrowseritem-members.html  qtbrowseritem.html  qtbuttonpropertybrowser-members.html  qtbuttonpropertybrowser.html  qtchareditorfactory-members.html  qtchareditorfactory.html  qtcharpropertymanager-members.html  qtcharpropertymanager.html  qtcheckboxfactory-members.html  qtcheckboxfactory.html  qtcoloreditorfactory-members.html  qtcoloreditorfactory.html  qtcolorpropertymanager-members.html  qtcolorpropertymanager.html  qtcursoreditorfactory-members.html  qtcursoreditorfactory.html  qtcursorpropertymanager-members.html  qtcursorpropertymanager.html  qtdateeditfactory-members.html  qtdateeditfactory.html  qtdatepropertymanager-members.html  qtdatepropertymanager.html  qtdatetimeeditfactory-members.html  qtdatetimeeditfactory.html  qtdatetimepropertymanager-members.html  qtdatetimepropertymanager.html  qtdoublepropertymanager-members.html  qtdoublepropertymanager.html  qtdoublespinboxfactory-members.html  (+68 more)
src/qtpropertybrowser-2.5-opensource/examples/canvas_typed/: mainwindow.cpp  mainwindow.h  qtcanvas.cpp
src/qtpropertybrowser-2.5-opensource/examples/canvas_variant/: main.cpp  mainwindow.cpp  mainwindow.h  qtcanvas.h
src/qtpropertybrowser-2.5-opensource/examples/decoration/: main.cpp
src/qtpropertybrowser-2.5-opensource/examples/demo/: main.cpp
src/qtpropertybrowser-2.5-opensource/examples/extension/: main.cpp
src/qtpropertybrowser-2.5-opensource/examples/object_controller/: main.cpp  objectcontroller.cpp  objectcontroller.h
src/qtpropertybrowser-2.5-opensource/examples/simple/: main.cpp
src/qtpropertybrowser-2.5-opensource/src/: qteditorfactory.cpp  qteditorfactory.h  qtpropertybrowser.h
template/: default.wkp
